k8s/base/bff-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-bff
spec:
  selector:
    app: portfolio-bff
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
