k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend
spec:
  selector:
    app: portfolio-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
